# simdxml-elixir

./: .gitignore  LICENSE  README.md  mix.exs
.github/workflows/: ci.yml  precompile.yml
lib/: simdxml.ex
lib/simdxml/: batch.ex  document.ex  element.ex  error.ex  native.ex  query.ex  quick.ex  result.ex  xpath.ex
native/simdxml_nif/: Cargo.toml
native/simdxml_nif/src/: batch.rs  compiled.rs  document.rs  element.rs  lib.rs  query.rs  quick.rs
pages/: getting-started.livemd  performance.livemd  query-combinators.livemd
test/: simdxml_test.exs
test/simdxml/: adversarial_test.exs  batch_test.exs  document_test.exs  element_test.exs  query_test.exs  quick_test.exs  result_test.exs
