[package]
name = "simdxml_nif"
version = "0.1.0"
edition = "2021"

[lib]
name = "simdxml_nif"
crate-type = ["cdylib"]

[features]
default = ["nif_version_2_15"]
nif_version_2_15 = ["rustler/nif_version_2_15"]
nif_version_2_16 = ["rustler/nif_version_2_16"]
nif_version_2_17 = ["rustler/nif_version_2_17"]

[dependencies]
rustler = "0.37"
simdxml = "0.2.1"
self_cell = "1"
memchr = "2"
